for kafka module

--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -20,5 +20,9 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_${scala.binary.version}</artifactId>
+        </dependency>
     </dependencies>
 </project>
