--- a/spark-elasticsearch/pom.xml
+++ b/spark-elasticsearch/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>spark-sql_2.11</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch-spark-20_${scala.binary.version}</artifactId>
         </dependency>
