--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_${scala.binary.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
