--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -25,6 +25,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.11</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql-kafka-0-10_2.11</artifactId>
         </dependency>
         <dependency>
@@ -49,7 +53,6 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_${scala.binary.version}</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>com.holdenkarau</groupId>
