--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,21 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>org.scalanlp</groupId>
+                <artifactId>breeze_2.12</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scalanlp</groupId>
+                <artifactId>breeze-natives_2.12</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scalanlp</groupId>
+                <artifactId>breeze-viz_2.12</artifactId>
+                <version>1.0</version>
+            </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
