--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,12 @@
                 <version>${spark.version}_${spark-testing-base.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>1.10.19</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
