--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>spark-testing-base_${scala.binary.version}</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
